<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginStart="@dimen/CardViewDp"
        android:layout_marginVertical="@dimen/CardViewDp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="12dp"
        android:layout_width="@dimen/CardViewWidth"
        android:layout_height="@dimen/CardViewHeight">


        <ImageView
            android:id="@+id/image_ev"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/playlist_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@color/semiBlack"
            android:gravity="center"
            android:paddingVertical="4dp"
            android:text="@string/playlist_title"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/cardView"
        app:layout_constraintTop_toTopOf="@id/cardView"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/playlistName_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/emotional_well_being_healing_practices_for_children"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playlistCount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/_32_video_series"
            android:textColor="@color/black" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>