<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    tools:context=".ui.playlistDetail.PlaylistDetailActivity">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:indeterminateTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <include
        android:visibility="gone"
        android:id="@+id/checkInet"
        layout="@layout/check_internet"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:expandedTitleMarginStart="64dp"
            app:collapsedTitleGravity="center"
            >
            <LinearLayout
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/text_bg"
                android:paddingHorizontal="5dp"
                android:orientation="vertical"
                >
                <TextView
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:layout_marginTop="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/emotional_well_being_healing_practices_for_children"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:id="@+id/title_tv"
                    android:textSize="20sp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    />
                <TextView
                    android:textSize="15sp"
                    android:id="@+id/desc_tv"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_this_series_we_break_down_the_impact_of_displacement_instability_violence_and_trauma_in_children_and_offer_exercises_to_support_children_in_their_healing_journey"

                    />
            </LinearLayout>
            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:gravity="center"
                        android:id="@+id/back_tv"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/red"
                        android:text="@string/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:drawableStartCompat="@drawable/ic_baseline_arrow_back" />

                    <TextView
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/red"
                        android:text="@string/playlist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_play_arrow"
        android:tint="@color/white"
        android:backgroundTint="@color/red"
        app:layout_anchor="@id/appBar"
        app:layout_anchorGravity="bottom|right|end"
        android:layout_marginEnd="32dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/series_tv"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/_32_video_series"
        app:layout_anchor="@id/float_btn"
        app:layout_anchorGravity="bottom" />

    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/playlist_rv"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_playlist_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>